--- a/contacts.html
+++ b/contacts.html
@@ -7,10 +7,10 @@
     <title>CONTACTS</title>
 </head>
 <body> <ul>
-    <li><a href="#">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="schools.html">schools</a></li>
     <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contacts.html">Contacts</a></li>
+    <li><a href="#">Contacts</a></li>
 </ul>
     
 </body>
