--- a/schools.html
+++ b/schools.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCHOOLS</title>
+    <link rel="stylesheet" href="generalstyles.css">
 </head>
 <body>
     
     <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="schools.html">schools</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#">schools</a></li>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="contacts.html">Contacts</a></li>
 </ul>
