--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <link rel="stylesheet" href="generalstyles.css">
+
 </head>
 <body>
-    <H1>Bugema university</H1>
-    <p>A chartered seeventhday adventist institutionof higher learning</p>
+    <H1 id="h1styles">Bugema university</H1>
+    <p id="pstyles">A chartered seeventhday adventist institutionof higher learning</p>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="schools.html">schools</a></li>
